--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="keywords" content="Minion Rush, Minion Rush Encyclopedia, Minion Rush Encyclopedia Project, Despicable Me Minion Rush, ftvfuntimevideos">
 		<meta name="description" content="The Minion Rush Encyclopedia is the ultimate resource for all things related to Minion Rush! Join our Discord server to contribute to our project!">
-	    	<meta http-equiv="Refresh" content="0; url='https://www.w3docs.com'" />
+	    	<meta http-equiv="Refresh" content="0; url='https://minionrushencyclopedia.github.io/home/'" />
 		
 		<link rel="icon" type="image/jpg" href="https://minionrushencyclopedia.github.io/home/Media/LOGOS/MinionRushEncyclopediaIcon.png"/>
 		<title>Minion Rush Encyclopedia - Home</title>
