--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <body>
 		<div class="topbar"> 
-			<a href="https://minionrushencyclopedia.github.io/home/"> <img class="logo" src='Media/LOGOS/LOGO.png'> </a> 
+			<a href="https://minionrushencyclopedia.github.io/home/"> <img class="logo" src='https://minionrushencyclopedia.github.io/home/Media/LOGOS/LOGO.png'> </a> 
 		</div>
 		
 		<button onclick="location.href = 'https://minionrushencyclopedia.github.io/home/';" class="tablink"> Home </button>
