--- a/home/index.html
+++ b/home/index.html
@@ -11,7 +11,7 @@
 		<title>Minion Rush Encyclopedia - Table of Contents</title>
 		
 		<link rel="stylesheet" href="../minionrushencyclopedia.github.io/style.css">
-		<link rel="stylesheet" media='screen and (min-width: 0px) and (max-width: 720px)' href="../minionrushencyclopedia.github.io/m_style.css"/>
+		<link rel="stylesheet" media='screen and (min-width: 0px) and (max-width: 720px)' href="../minionrushencyclopedia.github.io/m_style.css">
 		
 		
 		<!--	REMOVE THESE TAGS WHEN TESTING LOCALLY!!!	<link rel="stylesheet" href="https://minionrushencyclopedia.github.io/home/style.css"> --> 
