--- a/home/index.html
+++ b/home/index.html
@@ -10,7 +10,7 @@
 		<link rel="icon" type="image/jpg" href="Media/LOGOS/MinionRushEncyclopediaIcon.png"/>
 		<title>Minion Rush Encyclopedia - Table of Contents</title>
 		
-		<link rel="stylesheet" href="../minionrushencyclopedia.github.io/style.css">
+		<link rel="stylesheet" href="https://minionrushencyclopedia.github.io/minionrushencyclopedia.github.io/style.css">
 		<link rel="stylesheet" media='screen and (min-width: 0px) and (max-width: 720px)' href="../minionrushencyclopedia.github.io/m_style.css">
 		
 		
