--- a/home/index.html
+++ b/home/index.html
@@ -11,7 +11,7 @@
 		<title>Minion Rush Encyclopedia - Table of Contents</title>
 		
 		<link rel="stylesheet" href="https://minionrushencyclopedia.github.io/minionrushencyclopedia.github.io/style.css">
-		<link rel="stylesheet" media='screen and (min-width: 0px) and (max-width: 720px)' href="../minionrushencyclopedia.github.io/m_style.css">
+		<link rel="stylesheet" media='screen and (min-width: 0px) and (max-width: 720px)' href="https://minionrushencyclopedia.github.io/minionrushencyclopedia.github.io/m_style.css">
 		
 		
 		<!--	REMOVE THESE TAGS WHEN TESTING LOCALLY!!!	<link rel="stylesheet" href="https://minionrushencyclopedia.github.io/home/style.css"> --> 
@@ -90,7 +90,7 @@
 	</body>
 </html>
 
-		<script type="text/javascript" src="../minionrushencyclopedia.github.io/InsertElement.js">
+		<script type="text/javascript" src="https://minionrushencyclopedia.github.io/minionrushencyclopedia.github.io/InsertElement.js">
 		</script>
 		
 		<script>
