--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -7,11 +7,11 @@
 		<meta name="keywords" content="Minion Rush, Minion Rush Encyclopedia, Minion Rush Encyclopedia Project, Despicable Me Minion Rush, ftvfuntimevideos">
 		<meta name="description" content="The Minion Rush Encyclopedia is the ultimate resource for all things related to Minion Rush! Join our Discord server to contribute to our project!">
 		
-		<link rel="icon" type="image/jpg" href="../minionrushencyclopedia.github.io/Media/LOGOS/MinionRushEncyclopediaIcon.png"/>
+		<link rel="icon" type="image/jpg" href="../../minionrushencyclopedia.github.io/Media/LOGOS/MinionRushEncyclopediaIcon.png"/>
 		<title>Minion Rush Encyclopedia - Table of Contents</title>
 		
-		<link rel="stylesheet" href="../minionrushencyclopedia.github.io/style.css">
-		<link rel="stylesheet" media='screen and (min-width: 0px) and (max-width: 720px)' href="../minionrushencyclopedia.github.io/m_style.css"/>
+		<link rel="stylesheet" href="../../minionrushencyclopedia.github.io/style.css">
+		<link rel="stylesheet" media='screen and (min-width: 0px) and (max-width: 720px)' href="../../minionrushencyclopedia.github.io/m_style.css"/>
 		
 		
 		<!--	REMOVE THESE TAGS WHEN TESTING LOCALLY!!!	<link rel="stylesheet" href="https://minionrushencyclopedia.github.io/home/style.css"> --> 
