--- a/home/index.html
+++ b/home/index.html
@@ -66,3 +66,14 @@
 		</footer>
 	</body>
 </html>
+
+		<script type="text/javascript" src="../minionrushencyclopedia.github.io/InsertElement.js">
+		</script>
+		
+		<script>
+			CreateHeader();
+			CreateTabLinks();
+			CreateHamburgerMenu();
+			CreateFooter();
+			CreateDailyFact();
+		</script>
