--- a/home/index.html
+++ b/home/index.html
@@ -10,8 +10,8 @@
 		<link rel="icon" type="image/jpg" href="Media/LOGOS/MinionRushEncyclopediaIcon.png"/>
 		<title>Minion Rush Encyclopedia - Table of Contents</title>
 		
-		<link rel="stylesheet" href="style.css">
-		<link rel="stylesheet" media='screen and (min-width: 0px) and (max-width: 720px)' href="m_style.css"/>
+		<link rel="stylesheet" href="../style.css">
+		<link rel="stylesheet" media='screen and (min-width: 0px) and (max-width: 720px)' href="../m_style.css"/>
 		
 		
 		<!--	REMOVE THESE TAGS WHEN TESTING LOCALLY!!!	<link rel="stylesheet" href="https://minionrushencyclopedia.github.io/home/style.css"> --> 
