--- a/home/index.html
+++ b/home/index.html
@@ -66,7 +66,7 @@
 		</footer>
 	</body>
 
-		<script type="text/javascript" src="../minionrushencyclopedia.github.io/InsertElement.js">
+		<script type="text/javascript" src="../InsertElement.js">
 			CreateHeader();
 			CreateTabLinks();
 			CreateHamburgerMenu();
