--- a/home/index.html
+++ b/home/index.html
@@ -10,8 +10,8 @@
 		<link rel="icon" type="image/jpg" href="Media/LOGOS/MinionRushEncyclopediaIcon.png"/>
 		<title>Minion Rush Encyclopedia - Table of Contents</title>
 		
-		<link rel="stylesheet" href="../minionrushencyclopedia.github.io/style.css">
-		<link rel="stylesheet" media='screen and (min-width: 0px) and (max-width: 720px)' href="../minionrushencyclopedia.github.io/m_style.css"/>
+		<link rel="stylesheet" href="../base/style.css">
+		<link rel="stylesheet" media='screen and (min-width: 0px) and (max-width: 720px)' href="../base/m_style.css"/>
 		
 		
 		<!--	REMOVE THESE TAGS WHEN TESTING LOCALLY!!!	<link rel="stylesheet" href="https://minionrushencyclopedia.github.io/home/style.css"> --> 
@@ -20,7 +20,7 @@
 
     <body>
 		
-		<script src='../minionrushencyclopedia.github.io/ActionManager.js'>
+		<script src='../base/ActionManager.js'>
 		</script>
 		
 		<!--	UPDATED USING JAVASCRIPT	-->
@@ -30,7 +30,7 @@
 		<!--	UPDATED USING JAVASCRIPT	-->
 		<header id="header">
 			<noscript>
-				<a href=https://minionrushencyclopedia.github.io/home/> <img class=logo src='../minionrushencyclopedia.github.io/Media/LOGOS/LOGO.png'> </a><span>
+				<a href=https://minionrushencyclopedia.github.io/home/> <img class=logo src='../base/Media/LOGOS/LOGO.png'> </a><span>
 			</noscript>
 		</header>
 		
@@ -51,8 +51,8 @@
 		<div class="mediaBox"> Hello Fellow Minion Rushers! <iframe width="480" height="270" src="https://youtu.be/GBNVgab8wbs"> </iframe> <p class="subscript">Watch the video above to learn more about our project!</p> </div>
 		
 		<div class="container"> 
-			<div class="SmallMediaBox" style="float: left;"> <img src="../minionrushencyclopedia.github.io/Media/ICONS/contribute.png" class="image_emoticon"> Contribute <p class="paragraph"> If you are interested in contributing to the Minion Rush Encyclopedia Project, <a href="https://discord.com/invite/KmC27dH" target="_blank" rel="noopener noreferrer" class="hyperlink">please join our Discord server</a>. Our project is dependent on voluntary contributors, so any help would be greatly appreciated (and possibly rewarded)! 😁 </p> </div>
-			<div class="SmallMediaBox" style="float: right;"> <img src="../minionrushencyclopedia.github.io/Media/ICONS/about_us.png" class="image_emoticon"> About Us <p class="paragraph"> The Minion Rush Encyclopedia is a collaborative effort between many members of the Minion Rush community to archive and compile as much information about Despicable Me Minion Rush as possible. The project was started by ftvfuntimevideos with resource contributions from Jayden Tries and KrizzlySnider. </p> </div>
+			<div class="SmallMediaBox" style="float: left;"> <img src="../base/Media/ICONS/contribute.png" class="image_emoticon"> Contribute <p class="paragraph"> If you are interested in contributing to the Minion Rush Encyclopedia Project, <a href="https://discord.com/invite/KmC27dH" target="_blank" rel="noopener noreferrer" class="hyperlink">please join our Discord server</a>. Our project is dependent on voluntary contributors, so any help would be greatly appreciated (and possibly rewarded)! 😁 </p> </div>
+			<div class="SmallMediaBox" style="float: right;"> <img src="../base/Media/ICONS/about_us.png" class="image_emoticon"> About Us <p class="paragraph"> The Minion Rush Encyclopedia is a collaborative effort between many members of the Minion Rush community to archive and compile as much information about Despicable Me Minion Rush as possible. The project was started by ftvfuntimevideos with resource contributions from Jayden Tries and KrizzlySnider. </p> </div>
 		</div>
 		
 		<div id='DailyFact'>
@@ -67,7 +67,7 @@
 		
 		
 		<div class="mediaBox" style='width: 88%; background-color: silver'> 
-			<img src="../minionrushencyclopedia.github.io/Media/ICONS/LINK.png" class="image_emoticon"> Other Links 
+			<img src="../base/Media/ICONS/LINK.png" class="image_emoticon"> Other Links 
 			
 			<div>
 				<a href='https://minionrushencyclopedia.github.io/home/' class="NAVIGATION_BUTTON"> <img src="../minionrushencyclopedia.github.io/Media/ICONS/HOME_BUTTON.png" style="width: 100%;"> </img> </a>
@@ -90,7 +90,7 @@
 	</body>
 </html>
 
-		<script type="text/javascript" src="../minionrushencyclopedia.github.io/InsertElement.js">
+		<script type="text/javascript" src="../base/InsertElement.js">
 		</script>
 		
 		<script>
