--- a/home/index.html
+++ b/home/index.html
@@ -7,7 +7,7 @@
 		<meta name="keywords" content="Minion Rush, Minion Rush Encyclopedia, Minion Rush Encyclopedia Project, Despicable Me Minion Rush, ftvfuntimevideos">
 		<meta name="description" content="The Minion Rush Encyclopedia is the ultimate resource for all things related to Minion Rush! Join our Discord server to contribute to our project!">
 		
-		<link rel="icon" type="image/jpg" href="Media/LOGOS/MinionRushEncyclopediaIcon.png"/>
+		<link rel="icon" type="image/jpg" href="../base/Media/LOGOS/MinionRushEncyclopediaIcon.png"/>
 		<title>Minion Rush Encyclopedia - Table of Contents</title>
 		
 		<link rel="stylesheet" href="../base/style.css">
@@ -70,11 +70,11 @@
 			<img src="../base/Media/ICONS/LINK.png" class="image_emoticon"> Other Links 
 			
 			<div>
-				<a href='https://minionrushencyclopedia.github.io/home/' class="NAVIGATION_BUTTON"> <img src="../minionrushencyclopedia.github.io/Media/ICONS/HOME_BUTTON.png" style="width: 100%;"> </img> </a>
-				<a href='https://minionrushencyclopedia.github.io/table-of-contents/' class="NAVIGATION_BUTTON"> <img src="../minionrushencyclopedia.github.io/Media/ICONS/TABLE_BUTTON.png" style="width: 100%;"> </img> </a>
-				<a href='https://minionrushencyclopedia.github.io/other-links/' class="NAVIGATION_BUTTON"> <img src="../minionrushencyclopedia.github.io/Media/ICONS/ABOUT_US_BUTTON.png" style="width: 100%;"> </img> </a>
-				<a href="https://minionrushencyclopedia.github.io/archives/" class="NAVIGATION_BUTTON"> <img src="../minionrushencyclopedia.github.io/Media/ICONS/ARCHIVES_BUTTON.png" style="width: 100%;"> </img> </a>
-				<a href="https://minionrushencyclopedia.github.io/resource-hub/" class="NAVIGATION_BUTTON"> <img src="../minionrushencyclopedia.github.io/Media/ICONS/RESOURCE_HUB_BUTTON.png" style="width: 100%;"> </img> </a>
+				<a href='https://minionrushencyclopedia.github.io/home/' class="NAVIGATION_BUTTON"> <img src=".../base/Media/ICONS/HOME_BUTTON.png" style="width: 100%;"> </img> </a>
+				<a href='https://minionrushencyclopedia.github.io/table-of-contents/' class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/TABLE_BUTTON.png" style="width: 100%;"> </img> </a>
+				<a href='https://minionrushencyclopedia.github.io/other-links/' class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/ABOUT_US_BUTTON.png" style="width: 100%;"> </img> </a>
+				<a href="https://minionrushencyclopedia.github.io/archives/" class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/ARCHIVES_BUTTON.png" style="width: 100%;"> </img> </a>
+				<a href="https://minionrushencyclopedia.github.io/resource-hub/" class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/RESOURCE_HUB_BUTTON.png" style="width: 100%;"> </img> </a>
 			</div>
 		</div>
 		
