--- a/home/index.html
+++ b/home/index.html
@@ -70,7 +70,7 @@
 			<img src="../base/Media/ICONS/LINK.png" class="image_emoticon"> Other Links 
 			
 			<div>
-				<a href='https://minionrushencyclopedia.github.io/home/' class="NAVIGATION_BUTTON"> <img src=".../base/Media/ICONS/HOME_BUTTON.png" style="width: 100%;"> </img> </a>
+				<a href='https://minionrushencyclopedia.github.io/home/' class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/HOME_BUTTON.png" style="width: 100%;"> </img> </a>
 				<a href='https://minionrushencyclopedia.github.io/table-of-contents/' class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/TABLE_BUTTON.png" style="width: 100%;"> </img> </a>
 				<a href='https://minionrushencyclopedia.github.io/other-links/' class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/ABOUT_US_BUTTON.png" style="width: 100%;"> </img> </a>
 				<a href="https://minionrushencyclopedia.github.io/archives/" class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/ARCHIVES_BUTTON.png" style="width: 100%;"> </img> </a>
