--- a/home/index.html
+++ b/home/index.html
@@ -23,7 +23,7 @@
 		<?php include("https://minionrushencyclopedia.github.io/about-us/index.html"); ?>
 	    
 		<div class="topbar"> 
-			<a href="https://minionrushencyclopedia.github.io/home/"> <img class="logo" src='./base/Media/LOGOS/LOGO.png'> </a> 
+			<a href="https://minionrushencyclopedia.github.io/home/"> <img class="logo" src='../base/Media/LOGOS/LOGO.png'> </a> 
 		</div>
 		
 		<button onclick="location.href = 'https://minionrushencyclopedia.github.io/home/';" class="tablink"> Home </button>
