The Final Update

--- a/home/index.html
+++ b/home/index.html
@@ -48,7 +48,7 @@
 		
 		<h1>The Minion Rush Encyclopedia is the <u>ULTIMATE</u> resource for <i>EVERYTHING</i> Minion Rush related!</h1>
 		
-		<div class="mediaBox"> Hello Fellow Minion Rushers! <iframe width="480" height="270" src="https://youtu.be/GBNVgab8wbs"> </iframe> <p class="subscript">Watch the video above to learn more about our project!</p> </div>
+		<div class="mediaBox"> Hello Fellow Minion Rushers! <iframe width="480" height="270" src="https://www.youtube.com/embed/GBNVgab8wbs"> </iframe> <p class="subscript">Watch the video above to learn more about our project!</p> </div>
 		
 		<div class="container"> 
 			<div class="SmallMediaBox" style="float: left;"> <img src="../base/Media/ICONS/contribute.png" class="image_emoticon"> Contribute <p class="paragraph"> If you are interested in contributing to the Minion Rush Encyclopedia Project, <a href="https://discord.com/invite/KmC27dH" target="_blank" rel="noopener noreferrer" class="hyperlink">please join our Discord server</a>. Our project is dependent on voluntary contributors, so any help would be greatly appreciated (and possibly rewarded)! 😁 </p> </div>
