--- a/about-us/index.html
+++ b/about-us/index.html
@@ -11,7 +11,7 @@
 		<title>Minion Rush Encyclopedia - Table of Contents</title>
 		
 		<link rel="stylesheet" href="../minionrushencyclopedia.../base/.io/style.css">
-		<link rel="stylesheet" media='screen and (min-width: 0px) and (max-width: 720px)' href="../minionrushencyclopedia.../base/.io/m_style.css"/>
+		<link rel="stylesheet" media='screen and (min-width: 0px) and (max-width: 720px)' href="../base/.io/m_style.css"/>
 		
 		
 		<!--	REMOVE THESE TAGS WHEN TESTING LOCALLY!!!	<link rel="stylesheet" href="https://minionrushencyclopedia.../base/.io/home/style.css"> --> 
@@ -30,16 +30,16 @@
 		<!--	UPDATED USING JAVASCRIPT	-->
 		<header id="header">
 			<noscript>
-				<a href=https://minionrushencyclopedia.../base/.io/home/> <img class=logo src='../minionrushencyclopedia.../base/.io/Media/LOGOS/LOGO.png'> </a><span>
+				<a href=https://minionrushencyclopedia.github.io/home/> <img class=logo src='../base/.io/Media/LOGOS/LOGO.png'> </a><span>
 			</noscript>
 		</header>
 		
 		<!--	UPDATED USING JAVASCRIPT	-->
 		<div id=tablinks> 
 			<noscript>
-				<a href=https://minionrushencyclopedia.../base/.io/home/ class=no_js_tablink> Home </a>
-				<a href=https://minionrushencyclopedia.../base/.io/table-of-contents/ class=no_js_tablink> Table of Contents </a>
-				<a href=https://minionrushencyclopedia.../base/.io/other-pages/ class=no_js_tablink> More.. </a>
+				<a href=https://minionrushencyclopedia.github.io/home/ class=no_js_tablink> Home </a>
+				<a href=https://minionrushencyclopedia.github.io/table-of-contents/ class=no_js_tablink> Table of Contents </a>
+				<a href=https://minionrushencyclopedia.github.io/other-pages/ class=no_js_tablink> More.. </a>
 			</noscript>
 		</div>
 		
@@ -73,13 +73,13 @@
 			<noscript>
 				<p>© Minion Rush Encyclopedia</p>
 				<p>The Minion Rush Encyclopedia is a 'Despicable Me: Minion Rush' fan-site, and it is not officially affiliated with Minion Rush or Gameloft SE.</p>
-				<a href='https://minionrushencyclopedia.../base/.io/terms-of-use/' class='hyperlink' style='font-size: 12px; line-height: 30px;'>For more information, please visit our terms and conditions..</a>
+				<a href='../terms-of-use/' class='hyperlink' style='font-size: 12px; line-height: 30px;'>For more information, please visit our terms and conditions..</a>
 			</noscript>
 		</footer>
 	</body>
 </html>
 
-		<script type="text/javascript" src="../minionrushencyclopedia.../base/.io/InsertElement.js">
+		<script type="text/javascript" src="../base/InsertElement.js">
 		</script>
 		
 		<script>
