--- a/about-us/index.html
+++ b/about-us/index.html
@@ -7,11 +7,11 @@
 		<meta name="keywords" content="Minion Rush, Minion Rush Encyclopedia, Minion Rush Encyclopedia Project, Despicable Me Minion Rush, ftvfuntimevideos">
 		<meta name="description" content="The Minion Rush Encyclopedia is the ultimate resource for all things related to Minion Rush! Join our Discord server to contribute to our project!">
 		
-		<link rel="icon" type="image/jpg" href="Media/LOGOS/MinionRushEncyclopediaIcon.png"/>
+		<link rel="icon" type="image/jpg" href="../base/Media/LOGOS/MinionRushEncyclopediaIcon.png"/>
 		<title>Minion Rush Encyclopedia - Table of Contents</title>
 		
-		<link rel="stylesheet" href="../minionrushencyclopedia.../base/.io/style.css">
-		<link rel="stylesheet" media='screen and (min-width: 0px) and (max-width: 720px)' href="../base/.io/m_style.css"/>
+		<link rel="stylesheet" href="../base/style.css">
+		<link rel="stylesheet" media='screen and (min-width: 0px) and (max-width: 720px)' href="../base/m_style.css"/>
 		
 		
 		<!--	REMOVE THESE TAGS WHEN TESTING LOCALLY!!!	<link rel="stylesheet" href="https://minionrushencyclopedia.../base/.io/home/style.css"> --> 
@@ -20,7 +20,7 @@
 
     <body>
 		
-		<script src='../minionrushencyclopedia.../base/.io/ActionManager.js'>
+		<script src='../base/ActionManager.js'>
 		</script>
 		
 		<!--	UPDATED USING JAVASCRIPT	-->
