The Final Update

--- a/costumes/index.html
+++ b/costumes/index.html
@@ -53,7 +53,7 @@
 					<img src='../costumes/Media/IMAGES/Astronaut/Astronaut.png' class='subject_img'>
 				</span>
 				<div class='link_description_box'>
-					<a href='../costumes/Barker.html' class='link_title'> Astronaut Costume </a>
+					<a href='../costumes/Astronaut.html' class='link_title'> Astronaut Costume </a>
 					<a class='link_description'> Category: Costumes </a>
 					<a class='link_description'> Publish Date: July 30, 2021 </a>
 				</div>
