--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="keywords" content="Minion Rush, Minion Rush Encyclopedia, Minion Rush Wiki, Minion Rush Encyclopedia Project, ftvfuntimevideos">
 		<meta name="description" content="The Minion Rush Encyclopedia is the ultimate resource for all things related to Minion Rush! Join our Discord server to contribute to our project!">
 		<meta http-equiv="Refresh" content="0; url='https://minionrushencyclopedia.github.io/home/'" />
+	    	<meta name="google-site-verification" content="6LlkJ7narCes5VG_LWgi4CM-RjIM3aOAuklWTCh8Pqw" />
 		
 		<link rel="icon" type="image/jpg" href="../base/Media/LOGOS/MinionRushEncyclopediaIcon.png"/>
 		<title>Minion Rush Encyclopedia - 404 Error</title>
