--- a/other-links/index.html
+++ b/other-links/index.html
@@ -9,7 +9,7 @@
 		<meta name="google-site-verification" content="6LlkJ7narCes5VG_LWgi4CM-RjIM3aOAuklWTCh8Pqw" />
 		
 		<link rel="icon" type="image/jpg" href="../base/Media/LOGOS/MinionRushEncyclopediaIcon.png"/>
-		<title>Minion Rush Encyclopedia - Home</title>
+		<title>Minion Rush Encyclopedia - Other Links</title>
 		
 		<link rel="stylesheet" href="../base/style.css">
 		<link rel="stylesheet" media='screen and (min-width: 0px) and (max-width: 720px)' href="../base/m_style.css"/>
