--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	    	<meta name="google-site-verification" content="6LlkJ7narCes5VG_LWgi4CM-RjIM3aOAuklWTCh8Pqw" />
 		
 		<link rel="icon" type="image/jpg" href="../base/Media/LOGOS/MinionRushEncyclopediaIcon.png"/>
-		<title>Minion Rush Encyclopedia - 404 Error</title>
+		<title>Minion Rush Encyclopedia - Home</title>
 		
 		<link rel="stylesheet" href="../base/style.css">
 		<link rel="stylesheet" media='screen and (min-width: 0px) and (max-width: 720px)' href="../base/m_style.css"/>
