--- a/home/index.html
+++ b/home/index.html
@@ -7,7 +7,7 @@
 		<meta name="keywords" content="Minion Rush, Minion Rush Encyclopedia, Minion Rush Encyclopedia Project, Despicable Me Minion Rush, ftvfuntimevideos">
 		<meta name="description" content="The Minion Rush Encyclopedia is the ultimate resource for all things related to Minion Rush! Join our Discord server to contribute to our project!">
 		
-		<link rel="icon" type="image/jpg" href="Media/LOGOS/MinionRushEncyclopediaIcon.png"/>
+		<link rel="icon" type="image/jpg" href="../base/Media/LOGOS/MinionRushEncyclopediaIcon.png"/>
 		<title>Minion Rush Encyclopedia - Home</title>
 		
 		<link rel="stylesheet" href="../base/style.css">
