--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<div class="page_name"> Uh oh! </div>
 		
 		<div class="container"> 
-			<img class=gif src='../base/Media/ICONS/LOADING.gif'>
+			<img class=gif src='base/Media/ICONS/LOADING.gif'>
 		</div>
 		
 		
