--- a/404.html
+++ b/404.html
@@ -52,7 +52,7 @@
 		<div class="page_name"> Uh oh! </div>
 		
 		<div class="container"> 
-			<img class=gif src='../base/ICONS/LOADING.gif'>
+			<img class=gif src='base/Media/ICONS/LOADING.gif'>
 		</div>
 		
 		
