--- a/404.html
+++ b/404.html
@@ -63,7 +63,7 @@
 		<p class="subscript">You will be redirected to the homepage shortly. <br> If that does not work, click the text below.</p>
 		
 		
-		<div class="article_container"> 
+		<div class="container"> 
 			<a href='https://minionrushencyclopedia.github.io/home/' class="hyperlink">RETURN TO HOMEPAGE!</a>
 		</div>
 		
