--- a/about-us/index.html
+++ b/about-us/index.html
@@ -46,21 +46,21 @@
 		
 		<!--	CONTENT GOES HERE	-->
 		
-		<p class='paragraph'> </p>
+		<h1 class='page_name'>About Us</h1>
 		
-		<h1> What's the Minion Rush Encyclopedia? </h1>
+		<h2 class='orange_heading'> What's the Minion Rush Encyclopedia? </h1>
 		
 		<div class="container"> 
 			<p class="paragraph">The Minion Rush Encyclopedia is a collaborative effort between many members of the Minion Rush community to archive and compile as much information about “Despicable Me: Minion Rush” as possible. The project was formally started by ftvfuntimevideos, and it has received major contributions from Jayden Tries and KrizzlySnider.</p>
 		</div>
 		
-		<h1> The Origins </h1>
+		<h2 class='orange_heading'> The Origins </h1>
 		
 		<div class="container"> 
-			<p class="paragraph">The origins of this project can be traced back to January of 2021. Back then, the plan was to offer the Minion Rush Encyclopedia as a publicly viewable PDF file. However, this would produce many drawbacks, and it would make it nearly impossible for others to discover the resource. Therefore, in late May of 2021, ftvfuntimevideos began researching ways to host HTML files online for free. Eventually, he found ../base/.com, and he began converting the Minion Rush Encyclopedia from its initial PDF format to a website. The website was published on June 6, 2021, and it began appearing in Google searches on June 30, 2021. On July 2, ftvfuntimevideos announces the switch to a website format in the unofficial Minion Rush Discord server.</p>
+			<p class="paragraph">The origins of this project can be traced back to January of 2021. Back then, the plan was to offer the Minion Rush Encyclopedia as a publicly viewable PDF file. However, this would produce many drawbacks, and it would make it nearly impossible for others to discover the resource. Therefore, in late May of 2021, ftvfuntimevideos began researching ways to host HTML files online for free. Eventually, he found github.com, and he began converting the Minion Rush Encyclopedia from its initial PDF format to a website. The website was published on June 6, 2021, and it began appearing in Google searches on June 30, 2021. On July 2, ftvfuntimevideos announces the switch to a website format in the unofficial Minion Rush Discord server.</p>
 		</div>
 		
-		<h1> The Mission </h1>
+		<h2 class='orange_heading'> The Mission </h1>
 		
 		<div class="container"> 
 			<p class="paragraph">The mission of this project is to deliver the ultimate source of information about Despicable Me: Minion Rush. Throughout the past months, the Minion Rush Wikipedia page has become outdated and unreliable. Furthermore, Minion Rush players have found it difficult to find communities surrounding the game. With this resource, we seek to solve all these issues.</p>
