--- a/features/index.html
+++ b/features/index.html
@@ -46,7 +46,7 @@
 		
 		<!--	CONTENT GOES HERE	-->
 		
-		<h1>Features</h1>
+		<h1 class='orange_heading'>Features</h1>
 		
 		<div class='link_box_big'>
 				<span class='img_container'>
