--- a/home/index.html
+++ b/home/index.html
@@ -14,8 +14,8 @@
 		<link rel="stylesheet" media='screen and (min-width: 0px) and (max-width: 720px)' href="../base/m_style.css"/>
 		
 		
-		<!--	REMOVE THESE TAGS WHEN TESTING LOCALLY!!!	<link rel="stylesheet" href="https://minionrushencyclopedia.github.io/home/style.css"> --> 
-		<!--	REMOVE THESE TAGS WHEN TESTING LOCALLY!!!	<link rel="stylesheet" media='screen and (min-width: 0px) and (max-width: 720px)' href="https://minionrushencyclopedia.github.io/home/m_style.css"/> --> 
+		<!--	REMOVE THESE TAGS WHEN TESTING LOCALLY!!!	<link rel="stylesheet" href="../home/style.css"> --> 
+		<!--	REMOVE THESE TAGS WHEN TESTING LOCALLY!!!	<link rel="stylesheet" media='screen and (min-width: 0px) and (max-width: 720px)' href="../home/m_style.css"/> --> 
     </head>
 
     <body>
@@ -30,25 +30,36 @@
 		<!--	UPDATED USING JAVASCRIPT	-->
 		<header id="header">
 			<noscript>
-				<a href=https://minionrushencyclopedia.github.io/home/> <img class=logo src='../base/Media/LOGOS/LOGO.png'> </a><span>
+				<a href=../home/> <img class=logo src='../base/Media/LOGOS/LOGO.png'> </a><span>
 			</noscript>
 		</header>
 		
 		<!--	UPDATED USING JAVASCRIPT	-->
 		<div id=tablinks> 
 			<noscript>
-				<a href=https://minionrushencyclopedia.github.io/home/ class=no_js_tablink> Home </a>
-				<a href=https://minionrushencyclopedia.github.io/table-of-contents/ class=no_js_tablink> Table of Contents </a>
-				<a href=https://minionrushencyclopedia.github.io/more/ class=no_js_tablink> More.. </a>
+				<a href=../home/ class=no_js_tablink> Home </a>
+				<a href=../table-of-contents/ class=no_js_tablink> Table of Contents </a>
+				<a href=../more/ class=no_js_tablink> More.. </a>
 			</noscript>
 		</div>
 		
 		<!--	CONTENT GOES HERE	-->
+		
+		<div class='page'>
+		
 		<div class="page_name"> Home </div>
 		
-		<h1>The Minion Rush Encyclopedia is the <u>ULTIMATE</u> resource for <i>EVERYTHING</i> Minion Rush related!</h1>
+		<h1 class='orange_heading'>The Minion Rush Encyclopedia is the <u>ULTIMATE</u> resource for <i>EVERYTHING</i> Minion Rush related!</h1>
 		
 		<div class="mediaBox"> Hello Fellow Minion Rushers! <iframe width="480" height="270" src="https://www.youtube.com/embed/GBNVgab8wbs"> </iframe> <p class="subscript">Watch the video above to learn more about our project!</p> </div>
+		
+		<div class="BigMediaBox" style='background-color: rgb(35,35,35);'> OUR BLOG IS OUT!
+		<div class='container'>
+			<img src='../base/Media/LOGOS/BLOG_LOGO.png' style='width: 50%;'></img>
+		</div>
+			<p class='paragraph'>The Minion Rush Encyclopedia Blog is our primary communication method outside of Discord! In The Minion Rush Encyclopedia Blog, you will find the latest updates and information on community events or website changes. Check out our BRAND NEW blog below, and let us know what you think in our <a href="https://discord.com/invite/KmC27dH" class='hyperlink'>community-managed Discord server!</a> 😉</p> 
+			<a href='../blog' class='article_nav_button'>CLICK HERE</a>
+		</div>
 		
 		<div class="container"> 
 			<div class="SmallMediaBox" style="float: left;"> <img src="../base/Media/ICONS/contribute.png" class="image_emoticon"> Contribute <p class="paragraph"> If you are interested in contributing to the Minion Rush Encyclopedia Project, <a href="https://discord.com/invite/KmC27dH" target="_blank" rel="noopener noreferrer" class="hyperlink">please join our Discord server</a>. Our project is dependent on voluntary contributors, so any help would be greatly appreciated (and possibly rewarded)! 😁 </p> </div>
@@ -66,25 +77,38 @@
 		</div>
 		
 		
+		<div class="mediaBox"> 
+			Contributors
+			
+			<p class='subscript'>This website has been made possible with the help of the following individuals! Check out their social links below!</p>
+			<span> <a href='../user-profiles/Jayden-Tries.html' class='article_nav_button'>Jayden Tries</a> </span>
+			<span> <a href='../user-profiles/ftvfuntimevideos.html' class='article_nav_button'>ftvfuntimevideos</a> </span>
+			<span> <a href='../user-profiles/Blake-Is-Here.html' class='article_nav_button'>Infinity Minions</a> </span>
+			<span> <a href='../user-profiles/Minion2590.html' class='article_nav_button'>Minion 2590</a> </span>
+			<span> <a href='../user-profiles/Kanaza.html' class='article_nav_button'>Kanaza</a> </span>
+			<span> <a href='../user-profiles/XsamM-Productions.html' class='article_nav_button'>XsamM Productions</a> </span>
+		</div>
+		
 		<div class="mediaBox" style='width: 88%; background-color: silver'> 
 			<img src="../base/Media/ICONS/LINK.png" class="image_emoticon"> Other Links 
 			
 			<div>
-				<a href='https://minionrushencyclopedia.github.io/home/' class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/HOME_BUTTON.png" style="width: 100%;"> </img> </a>
-				<a href='https://minionrushencyclopedia.github.io/table-of-contents/' class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/TABLE_BUTTON.png" style="width: 100%;"> </img> </a>
-				<a href='https://minionrushencyclopedia.github.io/about-us/' class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/ABOUT_US_BUTTON.png" style="width: 100%;"> </img> </a>
-				<a href="https://minionrushencyclopedia.github.io/archives/" class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/ARCHIVES_BUTTON.png" style="width: 100%;"> </img> </a>
-				<a href="https://minionrushencyclopedia.github.io/resource-hub/" class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/RESOURCE_HUB_BUTTON.png" style="width: 100%;"> </img> </a>
+				<a href='../home/' class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/HOME_BUTTON.png" style="width: 100%;"> </img> </a>
+				<a href='../table-of-contents/' class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/TABLE_BUTTON.png" style="width: 100%;"> </img> </a>
+				<a href='../about-us/' class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/ABOUT_US_BUTTON.png" style="width: 100%;"> </img> </a>
+				<a href="../archives/" class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/ARCHIVES_BUTTON.png" style="width: 100%;"> </img> </a>
+				<a href="../resource-hub/" class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/RESOURCE_HUB_BUTTON.png" style="width: 100%;"> </img> </a>
 			</div>
 		</div>
 		
+		</div>
 		
 		<!--	UPDATED USING JAVASCRIPT	-->
 		<footer id='footer'>
 			<noscript>
 				<p>© Minion Rush Encyclopedia</p>
 				<p>The Minion Rush Encyclopedia is a 'Despicable Me: Minion Rush' fan-site, and it is not officially affiliated with Minion Rush or Gameloft SE.</p>
-				<a href='https://minionrushencyclopedia.github.io/terms-of-use/' class='hyperlink' style='font-size: 12px; line-height: 30px;'>For more information, please visit our terms and conditions..</a>
+				<a href='../terms-of-use/' class='hyperlink' style='font-size: 12px; line-height: 30px;'>For more information, please visit our terms and conditions..</a>
 			</noscript>
 		</footer>
 	</body>
