--- a/resource-hub/index.html
+++ b/resource-hub/index.html
@@ -39,7 +39,7 @@
 			<noscript>
 				<a href=https://minionrushencyclopedia.github.io/home/ class=no_js_tablink> Home </a>
 				<a href=https://minionrushencyclopedia.github.io/table-of-contents/ class=no_js_tablink> Table of Contents </a>
-				<a href=https://minionrushencyclopedia.github.io/more/ class=no_js_tablink> More.. </a>
+				<a href=https://minionrushencyclopedia.github.io/other-pages/ class=no_js_tablink> More.. </a>
 			</noscript>
 		</div>
 		
@@ -48,10 +48,10 @@
 		
 		<h2 class='page_name'>Resource Hub</h2>
 		
-		
+		<div class='container'>
 			<table>
 			  <tr>
-				<th colspan="10" class='table_name'>Color Key</th>
+				<caption class='table_name'>Color Key</caption>
 			  </tr>
 			
 			  <tr>
@@ -73,7 +73,7 @@
 				<td>The site is managed by members of the Minion Rush community.</td>
 			  </tr>
 			</table>
-		
+		</div>
 		
 		
 		<div class="container"> 
