--- a/table-of-contents/index.html
+++ b/table-of-contents/index.html
@@ -54,13 +54,16 @@
 		<div>
 			<a href="../costumes" class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/COSTUMES.png" style="width: 100%;"> </img> </a>
 			<a href="../locations" class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/LOCATIONS.png" style="width: 100%;"> </img> </a>
+			<a href="../update-logs" class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/UPDATE_LOGS.png" style="width: 100%;"> </img> </a>
 		</div>
 		
 		<div class='doubler'>
 			<div class='doubler_container'> <p class='doubler_title'> What is Minion Rush? </p> <img src="../base/Media/LOGOS/LOGO_MR_1.jpg" class="doubler_img"> </div>
 			<div class='doubler_child'> 
-				<p class='paragraph'>Minion Rush is a fun-filled, family-friendly endless runner game created by Gameloft in collaboration with Illumination and Universal. In Minion Rush, you can play as either Dave, Jerry, Carl, or any of the other various minions from the Despicable Me and Minions movies! You can also traverse through some of the most famous locations of the minions universe! With incredible graphics and intriguing swiping and tilting mechanisms, Minion Rush is an award-winning game and among one of the most popular endless running games in the mobile market.</p> 
-				<p class='paragraph'>Similar to games like Subway Surfers, Minion Rush offers a wide selection of characters and costumes that you can unlock in many different ways. The main premise of the game is to run and complete missions. These missions can award you with costume cards that can be used to unlock specific costumes. Each costume gives you a particular buff per run. You can upgrade the costume’s buffs by collecting additional costume cards and banana coins.</p>
+				<p class='paragraph'>Minion Rush is a fun-filled, family-friendly endless runner game created by Gameloft in collaboration with Illumination and Universal. In Minion Rush, you can play as either Dave, Jerry, Carl, or any of the other various minions from the Despicable Me and Minions movies! You can also traverse through some of the most famous locations of the minions universe! With incredible graphics and intriguing swiping and tilting mechanisms, Minion Rush is an award-winning game and among one of the most popular endless runners in the mobile market.</p> 
+				<p class='paragraph'>In Minion Rush, you control an endlessly running minion by swiping and tilting your device. For example, you can swipe up to jump over obstacles, swipe down to roll under obstacles, swipe from side to side to switch lanes, and tilt your device to control the direction of your minion in slides or some power-ups. During a run, there are three different lanes in each location, and your goal is to avoid obstacles, collect bananas, and complete missions. Along the way, you will also encounter exciting power-ups that can help you fulfill missions faster.</p>
+				<p class='paragraph'>Upon completing a mission, you may be rewarded with banana coins, tokens, costume cards, or other helpful perks. Costume cards and banana coins can be used to unlock one of over a hundred unique costumes for your minion. Each costume gives you a different buff specialized for different unique missions. You can also upgrade each costume by collecting EVEN MORE costume cards and banana coins. Apart from the traditional missions, there are also Special Missions, and special event rooms that can provide you with better rewards.</p>
+				<p class='paragraph'>Ever since the 5 Year Celebration Update, the story of the game has changed. Previously, the story was that all of Gru’s minions were competing for the “Minion of the Year” reward. However, as of the 5YCU update, the minions now work for the AVL, and they must compete to become the best AVL agent.</p>
 			</div>
 		</div>
 		
