--- a/terms-of-use/index.html
+++ b/terms-of-use/index.html
@@ -51,17 +51,17 @@
 		
 		<h1 class='page_name'>Terms of Use</h1>
 		
-		<h1>1. Introduction</h1>
+		<h1 class='orange_heading'>1. Introduction</h1>
 		<p class='paragraph'>(1.1) “The Minion Rush Encyclopedia” (referring to <a href=https://minionrushencyclopedia.github.io/ class='hyperlink_blue'> https://minionrushencyclopedia.github.io/ </a> and all of its subsidiaries, assets, graphics, and all other directly affiliated entities or divisions) is a community-driven website. Its content is naturally protected under copyright law, and is otherwise hosted on this domain (<a href=https://minionrushencyclopedia.github.io/ class='hyperlink_blue'> https://minionrushencyclopedia.github.io/ </a>) in accordance with Fair Use laws. </p>
 		<p class='paragraph'>(1.2) To ensure transparency between the website and user, it is necessary to establish these terms and conditions. By using this website, you fully accept these "Terms of Use" accordingly, and if you disagree with these terms and conditions in any manner, you are encouraged to cease the use of this website.</p>
 		
-		<h1>2. Notice of Copyright</h1>
+		<h1 class='orange_heading'>2. Notice of Copyright</h1>
 		<p class='paragraph'>(2.1) © Minion Rush Encyclopedia 2021</p>
 		<p class='paragraph'>(2.2) The Minion Rush Encyclopedia is naturally protected under the jurisdiction of copyright law, and its original assets are reserved. However, in some cases, assets may be allowed on the domain <a href=https://minionrushencyclopedia.github.io/ class='hyperlink_blue'> https://minionrushencyclopedia.github.io/ </a> in accordance with Fair Use laws.</p>
 		<p class='paragraph'>(2.3) The Minion Rush Encyclopedia is neither affiliated with or endorsed by “Despicable Me: Minion Rush” or Gameloft SE.</p>
 		<p class='paragraph'>(2.4) The administrators of this website do not seek to violate the copyright(s) of any person(s) or party/parties. In any case of copyright concerns, please forward them to <a href=mailto:'minionrushers.contact@gmail.com' class='hyperlink_blue'>“minionrushers.contact@gmail.com”</a>, and the concerns will be managed and discussed appropriately.</p>
 		
-		<h1>3. Publishing Rules</h1>
+		<h1 class='orange_heading'>3. Publishing Rules</h1>
 		<p class='paragraph'>(3.1) The Minion Rush Encyclopedia is a static website, and therefore has minimal functionality outside of delivering content to the user. All articles and/or media within this website domain and its subsidiaries are voluntarily submitted by individuals from external sources (namely <a href=https://discord.com/ class='hyperlink_blue'>Discord.com</a>).</p>
 		<p class='paragraph'>(3.2) Content submitted by users through <a href=https://discord.com/invite/KmC27dH class='hyperlink_blue'>“https://discord.com/invite/KmC27dH”</a> are reviewed by the website's administrators for approval. Users submitting content for this website and administrators approving user submissions must agree to the following rules:</p>
 		
@@ -81,11 +81,11 @@
 		<p class='paragraph'>(d) If the submitted work is a link to another website, the submission is exempt from Rule ‘c’ in Section 3.2 of this document.</p>
 		</div>
 		
-		<h1>4. User Privacy & Agreement</h1>
+		<h1 class='orange_heading'>4. User Privacy & Agreement</h1>
 		<p class='paragraph'>(4.1) As stated in Section 3.1 of this document, The Minion Rush Encyclopedia is a static website, and therefore has minimal functionality outside of delivering content to the user. As a result of this, The Minion Rush Encyclopedia and its staff members cannot collect any data from the user since the website is client-based. Furthermore, for this same reason, the identity of each individual browsing this website (and its pages) is left anonymous.</p>
 		<p class='paragraph'>(4.2) As stated in Section 1.2, you must completely agree with this document’s terms and conditions fully. If you disagree with these terms, and continue to use this website, The Minion Rush Encyclopedia is not responsible of any harm resulting from the use of this website.</p>
 		
-		<h1>5. Limited Warranties</h1>
+		<h1 class='orange_heading'>5. Limited Warranties</h1>
 		<p class='paragraph'>(5.1) By using this website, you must agree and be aware of the following:</p>
 		
 		<div class='mediaBox'>
@@ -103,7 +103,7 @@
 		<p class='paragraph'>(5.2) The Minion Rush Encyclopedia reserves the right to discontinue, alter, or modify any aspect of this website and its pages at any time without notice or explanation. You are not entitled to any compensation as a result of any changes made to this website and its pages or services.</p>
 		
 		
-		<h1>6. Website Usage</h1>
+		<h1 class='orange_heading'>6. Website Usage</h1>
 		<p class='paragraph'>(5.1) You must ONLY use this website as authorized by the following rules in this document.</p>
 		
 		<div class='mediaBox'>
