--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -46,7 +46,7 @@
 		
 		<!--	CONTENT GOES HERE	-->
 		
-		<h1>Tutorials</h1>
+		<h1 class="orange_heading">Tutorials</h1>
 		
 		<p class='paragraph'>Hello fellow Minion Rushers! Welcome to the tutorials page for The Minion Rush Encyclopedia! Here, you will find tutorials for how to navigate this website and how to contribute to the project.</p>
 		
