--- a/user-profiles/ftvfuntimevideos.html
+++ b/user-profiles/ftvfuntimevideos.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="keywords" content="Minion Rush, Minion Rush Encyclopedia, Minion Rush Wiki, Minion Rush Encyclopedia Project, ftvfuntimevideos">
 		<meta name="description" content="The Minion Rush Encyclopedia is the ultimate resource for all things related to Minion Rush! Join our Discord server to contribute to our project!">
-		<meta name="google-site-verification" content="6LlkJ7narCes5VG_LWgi4CM-RjIM3aOAuklWTCh8Pqw" />
+		<meta http-equiv="Refresh" content="0; url='https://www.youtube.com/channel/UCTYaTUQgYVV0elR-SdbLLgw'" />
 		
 		<link rel="icon" type="image/jpg" href="../base/Media/LOGOS/MinionRushEncyclopediaIcon.png"/>
-		<title>Minion Rush Encyclopedia - Other Links</title>
+		<title>Minion Rush Encyclopedia - ftvfuntimevideos</title>
 		
 		<link rel="stylesheet" href="../base/style.css">
 		<link rel="stylesheet" media='screen and (min-width: 0px) and (max-width: 720px)' href="../base/m_style.css"/>
@@ -34,9 +34,7 @@
 		<!--	UPDATED USING JAVASCRIPT	-->
 		<header id="header">
 			<noscript>
-				<a href=https://minionrushencyclopedia.github.io/home/ class=no_js_tablink> Home </a>
-				<a href=https://minionrushencyclopedia.github.io/table-of-contents/ class=no_js_tablink> Table of Contents </a>
-				<a href=https://minionrushencyclopedia.github.io/other-pages/ class=no_js_tablink> More.. </a>
+				<a href=https://minionrushencyclopedia.github.io/home/> <img class=logo src='../base/Media/LOGOS/LOGO.png'> </a><span>
 			</noscript>
 		</header>
 		
@@ -45,24 +43,28 @@
 			<noscript>
 				<a href=https://minionrushencyclopedia.github.io/home/ class=no_js_tablink> Home </a>
 				<a href=https://minionrushencyclopedia.github.io/table-of-contents/ class=no_js_tablink> Table of Contents </a>
-				<a href=https://minionrushencyclopedia.github.io/more/ class=no_js_tablink> More.. </a>
+				<a href=https://minionrushencyclopedia.github.io/other-pages/ class=no_js_tablink> More.. </a>
 			</noscript>
 		</div>
 		
 		<!--	CONTENT GOES HERE	-->
+
+		<div class="page_name"> Uh oh! </div>
 		
-		<h1></h1>
+		<div class="container"> 
+			<img class=gif src='base/Media/ICONS/LOADING.gif'>
+		</div>
 		
-		<div class="mediaBox" style='width: 88%; background-color: silver'> 
-			<img src="../base/Media/ICONS/LINK.png" class="image_emoticon"> Other Links 
-			
-			<div>
-				<a href="https://minionrushencyclopedia.github.io/home/" class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/HOME_BUTTON.png" style="width: 100%;"> </img> </a>
-				<a href="https://minionrushencyclopedia.github.io/table-of-contents/" class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/TABLE_BUTTON.png" style="width: 100%;"> </img> </a>
-				<a href="https://minionrushencyclopedia.github.io/about-us/" class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/ABOUT_US_BUTTON.png" style="width: 100%;"> </img> </a>
-				<a href="https://minionrushencyclopedia.github.io/archives/" class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/ARCHIVES_BUTTON.png" style="width: 100%;"> </img> </a>
-				<a href="https://minionrushencyclopedia.github.io/resource-hub/" class="NAVIGATION_BUTTON"> <img src="../base/Media/ICONS/RESOURCE_HUB_BUTTON.png" style="width: 100%;"> </img> </a>
-			</div>
+		
+		<div class="container"> 
+			<p class="paragraph"> This webpage does not exist or is currently unavailable.. </p>
+		</div>
+		
+		<p class="subscript">You will be redirected to the homepage shortly. <br> If that does not work, click the text below.</p>
+		
+		
+		<div class="container"> 
+			<a href='https://minionrushencyclopedia.github.io/home/' class="hyperlink">RETURN TO HOMEPAGE!</a>
 		</div>
 		
 		<!--	UPDATED USING JAVASCRIPT	-->
