--- a/costumes/Astronaut.html
+++ b/costumes/Astronaut.html
@@ -45,8 +45,9 @@
 		
 		
 		<!--	CONTENT GOES HERE	-->
+		<div class='page'>
 		
-		<div class="article_container"> 
+		<div id='Article' class="article_container"> 
 			<div>
 				<div class='article_img_container'>
 					<img src="../costumes/Media/IMAGES/Astronaut/Astronaut.png" class='subject_img'>
@@ -55,12 +56,21 @@
 				<div class='article_title'> Astronaut Costume </div>
 				
 				<p class='article_text'>
-					The Astronaut Costume is an "Epic" costume that was released in version 1.7.1, and its initial cost was $19.99US. In some cases, the costume could be found for a token price (usually 2,200 tokens). After the 5 Year Celebration update, the costume could be obtained for 35 Astronaut Costume Cards and 10 Banana Coins.
+					The Astronaut Costume is an "Epic" Minion Rush costume that was released in version 1.7.1, and its initial cost was $19.99US. In some cases, the costume could be found for a token price (usually 2,200 tokens). After the 5 Year Celebration update, the costume could be obtained for 35 Astronaut Costume Cards and 10 Banana Coins.
 				</p>
 			</div>
 		</div>
 		
-		<div class='BigMediaBox'> 
+		<div class='article_nav'>
+				<p class='page_name' style='margin-top: 1%;'>Navigation</p>
+				<span> <a href='#Article' class='article_nav_button'>Article</a> </span>
+				<span> <a href='#Media' class='article_nav_button'>Media</a> </span>
+				<span> <a href='#Charts' class='article_nav_button'>Charts</a> </span>
+				<span> <a href='#Trivia' class='article_nav_button'>Trivia</a> </span>
+				<span> <a href='#Links' class='article_nav_button'>Links</a> </span>
+		</div>
+		
+		<div id='Media' class='BigMediaBox'> 
 		
 		<img src="../base/Media/ICONS/MEDIA4.png" class="image_emoticon"> Media 
 				<div class='paragraph'> </div>
@@ -70,12 +80,12 @@
 				</div>
 		</div>
 		
-		<div class='BigMediaBox'> 
+		<div id='Charts' class='BigMediaBox'> 
 			<img src="../base/Media/ICONS/GRAPH2.png" class="image_emoticon"> Charts 
-			
+			<br>
 			<table>
 			  <tr>
-				<th colspan="10" class='table_name'>Costume Upgrades</th>
+				<caption class='table_name'>Costume Upgrades</caption>
 			  </tr>
 			
 			  <tr>
@@ -129,7 +139,7 @@
 			
 			<table>
 			  <tr>
-				<th colspan="10" class='table_name'>Costume Upgrades (Jelly Lab)</th>
+				<caption class='table_name'>Costume Upgrades (Jelly Lab)</caption>
 			  </tr>
 			
 			  <tr>
@@ -166,15 +176,17 @@
 		</div>
 		
 		<div class="container"> 
-			<div class="SmallMediaBox" style="float: left;"> 
+			<div id='Trivia' class="SmallMediaBox" style="float: left;"> 
 				<img src="../base/Media/ICONS/OFFER.png" class="image_emoticon"> Trivia <p class="paragraph"> </p> 
 				<p class='subscript'>There is no trivia available</p>
 			</div>
 			
-			<div class="SmallMediaBox" style="float: right;"> 
+			<div id='Links' class="SmallMediaBox" style="float: right;"> 
 				<img src="../base/Media/ICONS/LINK.png" class="image_emoticon"> Links <p class="paragraph"> </p>
 				<a href=https://www.youtube.com/watch?v=O_ETsWCnixs class='hyperlink'>https://www.youtube.com/watch?v=O_ETsWCnixs</a>
 			</div>
+		</div>
+		
 		</div>
 		
 		<!--						-->
