--- a/costumes/Barker.html
+++ b/costumes/Barker.html
@@ -45,8 +45,9 @@
 		
 		
 		<!--	CONTENT GOES HERE	-->
+		<div class='page'>
 		
-		<div class="article_container"> 
+		<div id='Article' class="article_container"> 
 			<div>
 				<div class='article_img_container'>
 					<img src="../costumes/Media/IMAGES/Barker/Barker.png" class='subject_img'>
@@ -61,8 +62,17 @@
 			</div>
 		</div>
 		
-		<div class='BigMediaBox'> 
+		<div id='article_nav' class='article_nav'>
+				<p class='page_name' style='margin-top: 1%;'>Navigation</p>
+				<span> <a href='#Article' class='article_nav_button'>Article</a> </span>
+				<span> <a href='#Media' class='article_nav_button'>Media</a> </span>
+				<span> <a href='#Charts' class='article_nav_button'>Charts</a> </span>
+				<span> <a href='#Trivia' class='article_nav_button'>Trivia</a> </span>
+				<span> <a href='#Links' class='article_nav_button'>Links</a> </span>
+		</div>
 		
+		
+		<div id='Media' class='BigMediaBox'> 
 		<img src="../base/Media/ICONS/MEDIA4.png" class="image_emoticon"> Media 
 				<div class='paragraph'> </div>
 				
@@ -79,12 +89,12 @@
 				</div>
 		</div>
 		
-		<div class='BigMediaBox'> 
+		<div id='Charts' class='BigMediaBox'> 
 			<img src="../base/Media/ICONS/GRAPH2.png" class="image_emoticon"> Charts 
-			
+			<br>
 			<table>
 			  <tr>
-				<th colspan="10" class='table_name'>Costume Upgrades</th>
+				<caption class='table_name'>Costume Upgrades</caption>
 			  </tr>
 			
 			  <tr>
@@ -103,7 +113,7 @@
 			
 			<table>
 			  <tr>
-				<th colspan="10" class='table_name'>Costume Upgrades (Jelly Lab)</th>
+				<caption class='table_name'>Costume Upgrades (Jelly Lab)</caption>
 			  </tr>
 			
 			  <tr>
@@ -120,15 +130,17 @@
 		</div>
 		
 		<div class="container"> 
-			<div class="SmallMediaBox" style="float: left;"> 
+			<div id='Trivia' class="SmallMediaBox" style="float: left;"> 
 				<img src="../base/Media/ICONS/OFFER.png" class="image_emoticon"> Trivia <p class="paragraph"> </p> 
 				<p class='subscript'>There is no trivia available</p>
 			</div>
 			
-			<div class="SmallMediaBox" style="float: right;"> 
+			<div id='Links' class="SmallMediaBox" style="float: right;"> 
 				<img src="../base/Media/ICONS/LINK.png" class="image_emoticon"> Links <p class="paragraph"> </p>
 				<p class='subscript'>There are no links available</p>
 			</div>
+		</div>
+		
 		</div>
 		
 		<!--						-->
