--- a/home/index.html
+++ b/home/index.html
@@ -55,7 +55,7 @@
 		
 		<div class="BigMediaBox" style='background-color: rgb(35,35,35);'> OUR BLOG IS OUT!
 		<div class='container'>
-			<img src='../base/Media/LOGOS/BLOG_LOGO.png' style='width: 50%; height: auto;'></img>
+			<img src='../base/Media/LOGOS/BLOG_LOGO.png' style='width: auto; height: 10vw;'></img>
 		</div>
 			<p class='paragraph'>The Minion Rush Encyclopedia Blog is our primary communication method outside of Discord! In The Minion Rush Encyclopedia Blog, you will find the latest updates and information on community events or website changes. Check out our BRAND NEW blog below, and let us know what you think in our <a href="https://discord.com/invite/KmC27dH" class='hyperlink'>community-managed Discord server!</a> 😉</p> 
 			<a href='../blog' class='article_nav_button'>CLICK HERE</a>
