--- a/costumes/Baker.html
+++ b/costumes/Baker.html
@@ -48,7 +48,8 @@
 		
 		<div class='page'>
 		
-		<div id='Article' class="article_container"> 
+		<div id='Article'>
+		<div class="article_container"> 
 			<div>
 				<div class='article_img_container'>
 					<img src="../costumes/Media/IMAGES/Baker/Baker.png" class='subject_img'>
@@ -62,8 +63,10 @@
 				</p>
 			</div>
 		</div>
+		</div>
 		
-		<div id='article_nav' class='article_nav'>
+		<div id='article_nav'>
+		<div class='article_nav'>
 				<p class='page_name' style='margin-top: 1%;'>Navigation</p>
 				<span> <a href='#Article' class='article_nav_button'>Article</a> </span>
 				<span> <a href='#Media' class='article_nav_button'>Media</a> </span>
@@ -71,29 +74,31 @@
 				<span> <a href='#Trivia' class='article_nav_button'>Trivia</a> </span>
 				<span> <a href='#Links' class='article_nav_button'>Links</a> </span>
 		</div>
+		</div>
 		
 		<div class='article_container'>
 		<h2 class='page_name_left'>Before the 5YCU</h2>
-		<p class='paragraph_left'>Before the 5 Year Celebration Update, this costume could be acquired for 550 tokens during certain periods of time.</p>
+			<p class='paragraph_left'>Before the 5 Year Celebration Update, this costume could be acquired for 550 tokens during certain periods of time.</p>
 		<h2 class='page_name_left'>During the 5YCU</h2>
-		<p class='paragraph_left'>After the 5 Year Celebration Update, this costume could be acquired for 60 Baker Costume Cards and 10 Banana Coins.</p>
+			<p class='paragraph_left'>After the 5 Year Celebration Update, this costume could be acquired for 60 Baker Costume Cards and 10 Banana Coins.</p>
 		</div>
 		
-		
-		<div id='Media' class='BigMediaBox'> 
-		<img src="../base/Media/ICONS/MEDIA4.png" class="image_emoticon"> Media 
-				<div class='paragraph'> </div>
-				
-				<div class='article_img_container'>
-					<img src="../costumes/Media/IMAGES/Baker/Baker.png" class='subject_img'>
-				</div>			
+		<div id='Media'>
+			<div class='BigMediaBox'> 
+			<img src="../base/Media/ICONS/MEDIA4.png" class="image_emoticon"> Media 
+					<div class='paragraph'> </div>
+					<div class='article_img_container'>
+						<img src="../costumes/Media/IMAGES/Baker/Baker.png" class='subject_img'>
+					</div>			
 
-				<div class='article_img_container'>
-					<img src="../costumes/Media/IMAGES/Baker/Baker1.jpg" class='subject_img'>
-				</div>
+					<div class='article_img_container'>
+						<img src="../costumes/Media/IMAGES/Baker/Baker1.jpg" class='subject_img'>
+					</div>
+			</div>
 		</div>
 		
-		<div id='Charts' class='BigMediaBox' style='background-color: rgba(0,0,0,0.35);'> 
+		<div id='Charts'>
+		<div class='BigMediaBox' style='background-color: rgba(0,0,0,0.35);'> 
 			<img src="../base/Media/ICONS/GRAPH2.png" class="image_emoticon"> Charts 
 			<br> <br>
 			<table>
@@ -152,10 +157,11 @@
 			  </tr>
 			</table>
 		</div>
+		</div>
 		
-		
-		<div id='Trivia' class="container"> 
-			<div class="SmallMediaBox" style="float: left;"> 
+		<div id='triviaLinksContainer'>
+		<div class="container"> 
+			<div id='Trivia' class="SmallMediaBox" style="float: left;"> 
 				<img src="../base/Media/ICONS/OFFER.png" class="image_emoticon"> Trivia <p class="paragraph"> </p> 
 				<ul class='bulletpoint_left'>
 				<li>Before the 5 Year Celebration Update (5YCU), this costume could generally be unlocked with tokens, and its ability was “Increase Bananas collected in El Macho’s Lair by 50%”.</li>
@@ -167,10 +173,11 @@
 				<a href='https://www.youtube.com/watch?v=VLlwfarcfws' class='hyperlink'>https://www.youtube.com/watch?v=VLlwfarcfws</a>
 			</div>
 		</div>
-		
 		</div>
 		
-		<!--						-->
+		
+		
+		</div>
 		
 		<!--	UPDATED USING JAVASCRIPT	-->
 		<footer id='footer'>
@@ -191,4 +198,7 @@
 			CreateTabLinks();
 			CreateHamburgerMenu();
 			CreateFooter();
+		</script>
+		
+		<script type="text/javascript" src="../base/ArticleMandatory.js">
 		</script>
