--- a/costumes/Baker.html
+++ b/costumes/Baker.html
@@ -49,7 +49,7 @@
 		<div class='page'>
 		
 		<div id='Article'>
-		<div class="article_container"> 
+		<div id='Article' class="article_container"> 
 			<div>
 				<div class='article_img_container'>
 					<img src="../costumes/Media/IMAGES/Baker/Baker.png" class='subject_img'>
@@ -66,14 +66,14 @@
 		</div>
 		
 		<div id='article_nav'>
-		<div class='article_nav'>
-				<p class='page_name' style='margin-top: 1%;'>Navigation</p>
-				<span> <a href='#Article' class='article_nav_button'>Article</a> </span>
-				<span> <a href='#Media' class='article_nav_button'>Media</a> </span>
-				<span> <a href='#Charts' class='article_nav_button'>Charts</a> </span>
-				<span> <a href='#Trivia' class='article_nav_button'>Trivia</a> </span>
-				<span> <a href='#Links' class='article_nav_button'>Links</a> </span>
-		</div>
+			<div id='article_nav' class='article_nav'>
+					<p class='page_name' style='margin-top: 1%;'>Navigation</p>
+					<span> <a href='#Article' class='article_nav_button'>Article</a> </span>
+					<span> <a href='#Media' class='article_nav_button'>Media</a> </span>
+					<span> <a href='#Charts' class='article_nav_button'>Charts</a> </span>
+					<span> <a href='#Trivia' class='article_nav_button'>Trivia</a> </span>
+					<span> <a href='#Links' class='article_nav_button'>Links</a> </span>
+			</div>
 		</div>
 		
 		<div class='article_container'>
@@ -84,7 +84,7 @@
 		</div>
 		
 		<div id='Media'>
-			<div class='BigMediaBox'> 
+			<div id='Media' class='BigMediaBox'> 
 			<img src="../base/Media/ICONS/MEDIA4.png" class="image_emoticon"> Media 
 					<div class='paragraph'> </div>
 					<div class='article_img_container'>
@@ -98,7 +98,7 @@
 		</div>
 		
 		<div id='Charts'>
-		<div class='BigMediaBox' style='background-color: rgba(0,0,0,0.35);'> 
+		<div id='Charts' class='BigMediaBox' style='background-color: rgba(0,0,0,0.35);'> 
 			<img src="../base/Media/ICONS/GRAPH2.png" class="image_emoticon"> Charts 
 			<br> <br>
 			<table>
